--- a/src/popup/style.css
+++ b/src/popup/style.css
@@ -8,7 +8,7 @@
 }
 
 main {
-  width: 380px;
+  width: 300px;
   padding: 20px;
 }
 
@@ -18,6 +18,7 @@ h1 {
 
 .container {
   display: flex;
+  flex-direction: column;
   margin-top: 15px;
   justify-content: space-between;
   align-items: center;
@@ -40,4 +41,29 @@ button {
   color: #ffffff;
   border-radius: 15px;
   font-family: "Lato", sans-serif;
+
+  outline: none;
+}
+
+button:hover {
+  transform: scale(1.03);
+}
+
+button:active {
+  transform: scale(0.995);
+}
+
+.button-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 200px;
+
+  margin-top: 15px;
+}
+
+.verify {
+  background-color: #ffffff;
+  border: 2px solid #cf526c;
+  color: #606060;
 }
